feat: add configuration